# demo-pdm

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/demo/: __init__.py
